[package]
name = "duplicates_rs"
version = "0.1.0"
authors = ["Benjamin Eckardt <Benjamin.Eckardt@beneck.de>"]
edition = "2021"

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
clap = { version = "4.0", features = ["derive"] }
glob = "0.3.1"
indicatif =  {version = "0.17.3", features = ["rayon"]}
md-5 = "0.10.5"
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
